# otus_homeworks

./: .gitignore  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  homework-1.yml  homework-2.yml  main-ci.yml
homework/: config.json  log_analyzer.py
homework_1_project_structure/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md
homework_1_project_structure/.github/workflows/: ci.yml
homework_1_project_structure/project/: main.py  pyproject.toml
homework_2_type_annotations/: .pre-commit-config.yaml  Makefile  pyproject.toml
homework_2_type_annotations/basic/: any.py  final.py  kwargs.py
homework_3_python_oop/: pyproject.toml
homework_3_python_oop/homework/: api.py  exceptions.py
homework_3_python_oop/src/: README.md
homework_4_pytests/: pytest.ini
homework_4_pytests/homework/: README.md
homework_5_warehouse/: pyproject.toml  pytest.ini
homework_5_warehouse/warehouse_management/: main.py
homework_6_html_server/: README.md  httpd.py  pyproject.toml
homework_6_html_server/pages_folder/: file.html  main.html
homework_6_html_server/src/: httpd.py  logger.py  main.py  utils.py
homework_7_django_project/: README.md  pyproject.toml
homework_7_django_project/otus_homework_django/: .dockerignore  Dockerfile  Makefile  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
homework_8_fastapi_project/: main.py
project/: main.py  pyproject.toml
project/config/: config.json
project/tests/: test_log_file_helpers.py  test_math_helpers.py  test_report_helpers.py
(+44 files in other folders)
