[project]
name = "otus-homeworks"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-mock (>=3.14.1,<4.0.0)",
    "redis (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
package-mode = false


[tool.pytest.ini_options]
testpaths = ["homework_4_pytests/homework/tests"]
python_files = ["test_*.py"]


build-backend = "poetry.core.masonry.api"
